# ati-proteomics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: arm_comparison.csv  calibration_metrics.json  column_manifest.json  cv_results.json  feature_importance.csv  feature_importance_combined.csv  feature_importance_top20.csv  feature_rank_stability.csv  predictions_20260412_084054.csv  predictions_combined.csv  predictions_multimodal.csv  protein_annotation.csv  run_manifest_20260412_084054.json  run_manifest_combined.json  run_manifest_multimodal.json  run_manifest_robust.json
docs/: TRIPOD_checklist.md
governance/: decision_log.md  limitations_register.md  novelty_statement.md  run_manifest.json
manuscript/: ATI_Proteomics_v6_submission_ready.docx  ATI_Proteomics_v7_revised.docx  ATI_proteomics_draft_v1.md  ATI_proteomics_draft_v2.md  ATI_proteomics_draft_v3.md  ATI_proteomics_draft_v4.md  ATI_proteomics_draft_v5.md  cover_letter_v1.md  cover_letter_v2.md  references.bib
src/: annotate.py  figures.py  robust_metrics.py  train.py
tests/: test_pipeline.py
