# ATI Plasma Proteomics — Machine Learning Classification
# RO-2026-001 | Frontier Translational Research Lab

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ati-proteomics"
version = "0.1.0"
description = "Calibrated plasma proteomic classification of acute tubular injury (KPMP SomaScan, n=44)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Julian Borges, MD", email = "jyborges@bu.edu" }
]
keywords = ["acute tubular injury", "proteomics", "machine learning", "kidney", "XGBoost", "calibration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scikit-learn==1.4.2",
  "xgboost==2.0.3",
  "matplotlib==3.8.4",
  "scipy==1.13.0",
]

[project.urls]
Repository = "https://github.com/fxmedus/ati-proteomics"
Dataset    = "https://doi.org/10.48698/6VRN-ZE53"
Paper      = "https://doi.org/10.1038/s41467-024-51304-x"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
